# ApiBrowser

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  DISTRIBUTION.md  DISTRIBUTION_SUMMARY.txt  Dockerfile  ENV_LOCATIONS.md  LICENSE-MIT  README.md  homebrew-formula.rb  install.sh
.github/workflows/: release.yml
src/: cache.rs  config.rs  main.rs  stats.rs
src/api/: client.rs  endpoints.rs  mod.rs  models.rs
src/ui/: app.rs  competition_browser.rs  match_detail.rs  mod.rs  team_detail.rs  team_list.rs
