[package]
name = "apibrowser"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Kistner"]
description = "A terminal UI for browsing FRC event data from The Blue Alliance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/J-kistner/ApiBrowser"
keywords = ["tui", "frc", "robotics", "terminal", "blue-alliance"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP & API
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }
